--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NISAKE GAME - ニサケゲーム</title>
+    <title>NISAKE GAME</title>
     <style>
         * {
             margin: 0;
@@ -20,102 +20,63 @@
             padding: 20px;
         }
         .container {
-            max-width: 800px;
+            max-width: 600px;
             background: white;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-            padding: 60px 40px;
+            padding: 80px 40px;
             text-align: center;
+        }
+        .logo {
+            font-size: 3em;
+            margin-bottom: 30px;
         }
         h1 {
             color: #333;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
             font-size: 2.5em;
+            letter-spacing: 0.05em;
         }
-        .subtitle {
+        .description {
             color: #666;
-            font-size: 1.2em;
+            font-size: 1.1em;
+            line-height: 1.8;
             margin-bottom: 40px;
         }
-        .apps-section {
-            margin-top: 50px;
-        }
-        .apps-title {
-            color: #333;
-            font-size: 1.5em;
-            margin-bottom: 30px;
-        }
-        .app-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin-top: 30px;
-        }
-        .app-card {
-            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
-            padding: 20px;
-            border-radius: 15px;
+        .link {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 12px 30px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             text-decoration: none;
+            border-radius: 25px;
             transition: transform 0.3s;
         }
-        .app-card:hover {
-            transform: translateY(-5px);
-        }
-        .app-name {
-            font-size: 1.1em;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-        .app-desc {
-            font-size: 0.9em;
-            opacity: 0.9;
+        .link:hover {
+            transform: translateY(-2px);
         }
         footer {
-            margin-top: 50px;
+            margin-top: 60px;
             color: #999;
             font-size: 0.9em;
-        }
-        .emoji {
-            font-size: 2em;
-            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="emoji">🎮🎵</div>
+        <div class="logo">🎮</div>
         <h1>NISAKE GAME</h1>
-        <p class="subtitle">日常に心地よい音楽を</p>
-        
-        <p style="color: #666; line-height: 1.8;">
-            私たちは、日常を豊かにする音楽アプリを開発しています。<br>
-            広告なしで楽しめる、シンプルで使いやすいBGMアプリをお届けします。
+        <p class="description">
+            日常に心地よい音楽を。<br>
+            シンプルで使いやすいBGMアプリを中心に、<br>
+            毎日をより豊かにする音楽体験をお届けしています。
         </p>
-
-        <div class="apps-section">
-            <h2 class="apps-title">🎵 Our Apps</h2>
-            <div class="app-list">
-                <a href="https://play.google.com/store/apps/details?id=com.nisake.chillbgm" class="app-card">
-                    <div class="app-name">🎧 Chill BGM</div>
-                    <div class="app-desc">リラックスできるチルBGM</div>
-                </a>
-                <a href="#" class="app-card">
-                    <div class="app-name">🎸 Rock Vibes</div>
-                    <div class="app-desc">エネルギッシュなロックBGM</div>
-                </a>
-                <a href="#" class="app-card">
-                    <div class="app-name">🎹 Cozy Acoustic</div>
-                    <div class="app-desc">温かみのあるアコースティック</div>
-                </a>
-            </div>
-        </div>
-
+        <a href="https://play.google.com/store/apps/developer?id=NISAKE+GAME" class="link">
+            Google Play で見る
+        </a>
         <footer>
             <p>&copy; 2024 NISAKE GAME. All rights reserved.</p>
-            <p style="margin-top: 10px;">
-                <a href="mailto:nisake.gameアットマークgmail.com" style="color: #666;">Contact</a>
-            </p>
         </footer>
     </div>
 </body>
