--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             シンプルで使いやすいBGMアプリを中心に、<br>
             毎日をより豊かにする音楽体験をお届けしています。
         </p>
-        <a href="https://play.google.com/store/apps/developer?id=NISAKE+GAME" class="link">
+        <a href="https://play.google.com/store/apps/dev?id=6719160921059869044" class="link">
             Google Play で見る
         </a>
         <footer>
